Add async defer to script tag Move initialization code to onload
Signed-off-by: Bipul Adhikari <badhikar@redhat.com>

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
-    <script src="./index.js"></script>
+    <script src="./index.js" async defer></script>
     <style>
         video {
             display: none;
         }
+
         #c1 {
             display: none;
         }
